- Added two extra shell-based exercises.

--- a/week1/workshop-week1.ipynb
+++ b/week1/workshop-week1.ipynb
@@ -339,6 +339,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercise 3\n",
+    "The following two exercises are about getting used to running python through a shell. The program for this exercises is a simple hello world program.\n",
+    "1. Open a new terminal using the plus button above the file browser or File → New Launcher.\n",
+    "2. Use `ls` to show the contents of the folder you're in.\n",
+    "3. Use `cd workshops` to change into the workshops folder, followed by `cd week1` to change to this week's workshop folder.\n",
+    "4. Run `python exercise3.py` to execute the script exercise3.py in python. Your output should be the same as the output of the next cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "print(os.popen('python exercise3.py').read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "Take your code from Exercise 1 and store it in a new file, exercise4.py. Run this similarly to Exercise 3. You can create a new file through the launcher by clicking on the New Text File button, or by running `touch exercise4.py` in the terminal. Your output should be the same as Exercise 1. Remember that files are case sensitive, so Exercise4.py is not the same as exercise4.py."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "print(os.popen('python exercise4.py').read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Recommended Reading:\n",
     "[This article on Dataquest](https://www.dataquest.io/blog/jupyter-notebook-tutorial/) is an excellent introduction to Jupyter notebook.  If you haven't used Jupyter notebook before, I recommend familiarising yourself with it."
    ]
@@ -371,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
