- Small typos and consistency improvement.

--- a/week1/workshop-week1.ipynb
+++ b/week1/workshop-week1.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "Pansas is a library that contains high-level data structures and manipulation tools for faster analysis.  As with most libraries, an [API reference](https://pandas.pydata.org/pandas-docs/stable/reference/index.html) is available which details all of the functionality provided by pandas.  This lab will focus on the two most important data structures provided by pandas, the [Series](https://pandas.pydata.org/pandas-docs/stable/reference/series.html) and [Data Frame](https://pandas.pydata.org/pandas-docs/stable/reference/frame.html).\n",
     "\n",
-    "It's worth reading through the [Intro to Data Strcutres](https://pandas.pydata.org/pandas-docs/stable/getting_started/dsintro.html) article on the pandas website to familiarise yourself with these two data structures.  There are also a number of step-by-step tutorials available online, such as [this one by DataCamp](https://www.datacamp.com/community/tutorials/pandas-tutorial-dataframe-python) that is worth following following."
+    "It's worth reading through the [Intro to Data Structures](https://pandas.pydata.org/pandas-docs/stable/getting_started/dsintro.html) article on the pandas website to familiarise yourself with these two data structures.  There are also a number of step-by-step tutorials available online, such as [this one by DataCamp](https://www.datacamp.com/community/tutorials/pandas-tutorial-dataframe-python) which are worth following."
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# series constructor with data as a list of integers\n",
+    "# Series constructor with data as a list of integers\n",
     "\n",
     "l = [4,3,-5,9,1,7]\n",
     "s = pd.Series(l)"
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the default indexing starts from zero\n",
+    "# The default indexing starts from zero\n",
     "s.index"
    ]
   },
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# retrieve the values of the series\n",
+    "# Retrieve the values of the series\n",
     "s.values"
    ]
   },
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create your own index using lists\n",
+    "# Create your own index using lists\n",
     "newIndex = ['a','b','c','d','e','f']\n",
     "s.index  = newIndex"
    ]
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verify the index\n",
+    "# Verify the index\n",
     "s"
    ]
   },
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a series from a python dict\n",
+    "# Create a series from a python dict\n",
     "\n",
     "Aus_Emission = {'1990':15.45288167, '2000':17.20060983, '2007':17.86526004,\n",
     "                '2008':18.16087566,'2009':18.20018196,'2010':16.92095367,\n",
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# retrieve the values of the series\n",
+    "# Retrieve the values of the series\n",
     "co2_Emission.values"
    ]
   },
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verify the series object\n",
+    "# Verify the series object\n",
     "co2_Emission"
    ]
   },
@@ -245,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slicing the series using a boolean array operation \n",
+    "# Slicing the series using a boolean array operation \n",
     "co2_Emission[co2_Emission>16.0]"
    ]
   },
@@ -255,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slicing the series using a time period\n",
+    "# Slicing the series using a time period\n",
     "co2_Emission[:'2000']"
    ]
   },
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# double the values of the series object\n",
+    "# Doubling the values of the series object\n",
     "doubled = co2_Emission*2\n",
     "doubled"
    ]
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# finding the average value of the series\n",
+    "# Finding the average value of the series\n",
     "co2_Emission.mean()"
    ]
   },
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# defining the column name\n",
+    "# Defining the column name\n",
     "co2_Emission.name = 'CO2 Emission'"
    ]
   },
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# defining the name of the index\n",
+    "# Defining the name of the index\n",
     "co2_Emission.index.name = 'Year'"
    ]
   },
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verify the series object\n",
+    "# Verifying the series object\n",
     "co2_Emission"
    ]
   },
@@ -316,13 +316,11 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "Pandas Series objects have both <i>ndarray-like</i> and <i>dict-like properties</i>. Given the co2_Emission series object do the following:\n",
+    "Pandas Series objects have both <i>ndarray-like</i> and <i>dict-like properties</i>. Given the co2_Emission series object, do the following:\n",
     "\n",
     "- Similar to the average of the series object, retrieve the maximum, median and cumulative sum of CO2 emission between  1960 to 2013 (max(), median() and cumsum() methods).\n",
-    "\n",
-    "\n",
     "- Retrieve the CO2 emissions in Australia between 2000 to 2010.\n",
-    "- Given the population of Australia in 2013 is 23117353, retrieve the CO2 emission per capita for that year.\n",
+    "- Given the population of Australia in 2013 was 23117353, retrieve the CO2 emission per capita for that year.\n",
     "\n"
    ]
   },
@@ -340,7 +338,7 @@
    "metadata": {},
    "source": [
     "### Exercise 3\n",
-    "The following two exercises are about getting used to running python through a shell. The program for this exercises is a simple hello world program.\n",
+    "The following two exercises are about getting used to running python through a shell. The program for these exercises is a simple hello world program.\n",
     "1. Open a new terminal using the plus button above the file browser or File → New Launcher.\n",
     "2. Use `ls` to show the contents of the folder you're in.\n",
     "3. Use `cd workshops` to change into the workshops folder, followed by `cd week1` to change to this week's workshop folder.\n",
