--- a/Week2-lab/2021S2-workshop-week2-lab.ipynb
+++ b/Week2-lab/2021S2-workshop-week2-lab.ipynb
@@ -23,6 +23,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\chris\\anaconda3\\lib\\site-packages (1.2.3)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\chris\\anaconda3\\lib\\site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\chris\\anaconda3\\lib\\site-packages (from pandas) (1.19.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\chris\\anaconda3\\lib\\site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\chris\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
